test/ok/0039_patternMatchingWildCard.neon
data Option (A: Type) =
| Some (x: A)
| None

let test = match Some(Int, 5) with
  | Some(A, x) -> 42
  | _ -> 1